src/user.css
/* ... */
.main-navBar-navBarLink[href='/eternal-jukebox'] > .collection-icon,
.main-yourLibraryX-navLink[href='/eternal-jukebox'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/phosphor-icons/infinity.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/eternal-jukebox'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/eternal-jukebox'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/phosphor-icons/infinity-bold.svg');
  background-color: var(--spice-accent) !important;
}

.main-navBar-navBarLink[href='/new-releases'] > .collection-icon,
.main-yourLibraryX-navLink[href='/new-releases'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_alert_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/new-releases'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/new-releases'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_alert_24_filled.svg');
  background-color: var(--spice-accent) !important;
}

.main-navBar-navBarLink[href='/reddit'] > .collection-icon,
.main-yourLibraryX-navLink[href='/reddit'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/reddit/reddit_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/reddit'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/reddit'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/reddit/reddit_filled.svg');
  background-color: var(--spice-accent) !important;
}

.main-navBar-navBarLink[href='/stats'] > .collection-icon,
.main-yourLibraryX-navLink[href='/stats'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_chart_multiple_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/stats'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/stats'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_chart_multiple_24_filled.svg');
  background-color: var(--spice-accent) !important;
}

.main-navBar-navBarLink[href='/name-that-tune'] > .collection-icon,
.main-yourLibraryX-navLink[href='/name-that-tune'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_music_note_2_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/name-that-tune'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/name-that-tune'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_music_note_2_24_filled.svg');
  background-color: var(--spice-accent) !important;
}

.main-navBar-navBarLink[href='/betterLibrary'] > .collection-icon,
.main-yourLibraryX-navLink[href='/betterLibrary'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_library_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/betterLibrary'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/betterLibrary'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_library_24_filled.svg');
  background-color: var(--spice-accent) !important;
}

.main-navBar-navBarLink[href='/better-local-files'] > .collection-icon,
.main-yourLibraryX-navLink[href='/better-local-files'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_folder_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/better-local-files'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/better-local-files'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_folder_24_filled.svg');
  background-color: var(--spice-accent) !important;
}

.main-navBar-navBarLink[href='/ncs-visualizer'] > .collection-icon,
.main-yourLibraryX-navLink[href='/ncs-visualizer'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/ncs-visualizer/visualizer_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/ncs-visualizer'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/ncs-visualizer'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/ncs-visualizer/visualizer_filled.svg');
  background-color: var(--spice-accent) !important;
}

.home-icon path,
.search-icon path,
.collection-icon path,
.home-active-icon path,
.search-active-icon path,
.collection-active-icon path {
  display: none !important;
}

.main-createPlaylistButton-button {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_add_circle_24_regular.svg');
  background-color: var(--spice-subtext) !important;
  padding: 0px;
  margin: auto;
  height: 24px !important;
  width: 24px !important;
  display: block !important;
  margin-top: 20px !important;
  margin-bottom: 20px !important;
}

.main-createPlaylistButton-button svg {
  display: none !important;
}

.main-createPlaylistButton-createPlaylistIcon {
  background-color: var(--spice-subtext) !important;
  display: block !important;
}
/* ... */

